# chat-image

./: README.md  eslint.config.js  index.html  package-lock.json  package.json  roadmap.md  vite.config.ts  vitest.config.ts
docs/: FEATURE_BACKLOG.md  desktop-release-verification.md
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/__tests__/: setup.ts
src/__tests__/components/: App.test.ts  ChatContainer.test.ts  ChatInput.test.ts  ConfigModal.test.ts  ConfigSwitcher.test.ts  ConfirmModal.test.ts  CustomStyleDialog.test.ts  ExportImportPanel.test.ts  GalleryView.test.ts  Header.test.ts  HistorySidebar.test.ts  (+7 more)
src/composables/: useChat.ts  useConfig.ts  useCustomStyles.ts  useFocusTrap.ts  useHistory.ts  useImageDownload.ts  useImageEdit.ts  useImageGeneration.ts  useKeyboardShortcuts.ts  useModalLayer.ts  usePromptSuggestions.ts  useTheme.ts  useToast.ts
src/i18n/: index.ts
src/platform/: desktopHistoryExport.ts  desktopHistoryImport.ts  httpClient.ts  imageReferenceCleanup.ts  imageRepository.ts  localImageActions.ts  metadataStore.ts  pwaRegisterStub.ts  runtime.ts  tauriImageRepository.ts  webImageRepository.ts  webPersistence.ts
src/router/: index.ts
src/services/: api.ts
src/stores/: chat.ts  config.ts
src/types/: index.ts
src/utils/: chatImportValidation.ts  constants.ts  generation.ts  highlight.ts  imagePersistence.ts  images.ts  persistenceError.ts  promptEnhancers.ts  promptTemplates.ts  storage.ts
(+60 files in other folders)
